--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "regulus/upstream",
-	"description": "A simple composer package for Laravel 5 that assists with file uploads and image resizing/cropping.",
+	"name": "nex/upstream",
+	"description": "A simple composer package for Laravel 8 that assists with file uploads and image resizing/cropping.",
 	"license": "MIT",
 	"authors": [
 		{
